# python_magnetdb

./: .gitignore  .gitmodules  Dockerfile  Dockerfile-dev  Dockerfile-env  README-dev.md  README.md  TODO  config.py  db.sqlite3  docker-compose-dev-traefik-ssl.yml  docker-compose-dev.yml  docker-compose-remi.yml  docker-compose-traefik-ssl.yml  docker-compose-traefik.yml  docker-compose.yml  docker-nginxproxy.yml  docker-traefik.yml  flow_params.json  magnets.db  manage.py  network_internal.conf  pyproject.toml  requirements.txt  requirements_dev.txt  settings.env  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
magnetdb/: asgi.py  (+3 more)
python_magnetapi/: README.md  pyproject.toml  setup.py
python_magnetapi/debian/: README.Debian  README.source  changelog  control  copyright  rules  watch
python_magnetapi/debian/patches/: __init__.patch  fix-python3.patch  ftbs.patch  init.patch  power.patch  series  setup.patch
python_magnetapi/python_magnetapi/: add_geometry_to_part.py  connect.py  create_record.py  datatools.py  flow_params.py  python_magnetrun.py  txt2csv.py  utils.py
python_magnetsetup/: .gitignore  README.md  flow_params.json  pyproject.toml  settings.env
python_magnetsetup/debian/: README.Debian  README.source  changelog  control  copyright  rules  watch
python_magnetsetup/python_magnetsetup/: __init__.py  ana.py  bitter.py  cfg.py  cli.py  config.json  config.py  file_utils.py  generate_commands.py  generate_config.py  insert.py  job.py  jsonmodel.py  machines.json  machines.py  magnetsetup.json  node.py  objects.py  setup.py  supra.py  units.py  utils.py
python_magnetsetup/python_magnetsetup/postprocessing/: Readme.md  pv-scalarfield.py
python_magnetsetup/python_magnetsetup/templates/CG/3D/thelec/: T_robin.mustache  cfg.mustache  channel-grad.mustache  channel-gradH.mustache  channel-mean.mustache  channel-meanH.mustache  conductor-linear-static.mustache  conductor-nonlinear-static.mustache  insulator-static.mustache  json-nonlinear.mustache  json.mustache  stats_Current.mustache  stats_Power.mustache
python_magnetsetup/python_magnetsetup/templates/HDG/3D/thelec/: T_robin.mustache  cfg.mustache  channel-grad.mustache  channel-gradH.mustache  channel-mean.mustache  channel-meanH.mustache  conductor-linear-static.mustache  conductor-nonlinear-static.mustache  flux-channel-grad.mustache  flux-channel-gradH.mustache  flux-channel-meanH.mustache  insulator-static.mustache  json.mustache  stats_Power.mustache  stats_T.mustache
python_magnetsetup/python_magnetsetup/templates/cfpdes/3D/thelec/: T_robin.mustache  cfg.mustache  channel-grad.mustache  channel-gradH.mustache  channel-mean.mustache  channel-meanH.mustache  conductor-linear-static.mustache  conductor-static.json  flux-channel-grad.mustache  flux-channel-gradH.mustache  flux-channel-mean.mustache  insulator-static.json  insulator-static.mustache  json-nonlinear.mustache  json.mustache  material-conductor-nonlinear-static.mustache  stats_Power.mustache
python_magnetsetup/python_magnetsetup/templates/cfpdes/3D/thmagel/: stats_Current.mustache
python_magnetsetup/python_magnetsetup/templates/cfpdes/Axi/mag/: conductor-linear-static.mustache  conductor-static.json  insulator-static.mustache  json.mustache  stats_Current.mustache
python_magnetsetup/python_magnetsetup/templates/cfpdes/Axi/mag_hcurl/: cfg.mustache  conductor-linear-static.mustache  conductor-static.json  insulator-static.json  insulator-static.mustache  json.mustache  magnetic-conductor.mustache  stats_Current.mustache
python_magnetsetup/python_magnetsetup/templates/cfpdes/Axi/mqs/: conduct-nosource.json  conduct-nosource.mustache  conductor-linear-transient.mustache  conductor-transient.json  insulator-transient.json  insulator-transient.mustache  json.mustache  stats_Current.mustache
python_magnetsetup/python_magnetsetup/templates/cfpdes/Axi/mqs_hcurl/: conduct-nosource.json  conduct-nosource.mustache  conductor-linear-transient.mustache  conductor-transient.json  insulator-transient.mustache  json.mustache  stats_Current.mustache  stats_Power.mustache
python_magnetsetup/python_magnetsetup/templates/cfpdes/Axi/thelec/: cfg.mustache  channel-grad.mustache  conductor-linear-static.mustache  conductor-nonlinear-static.mustache  conductor-static.json  flux-channel-gradH.mustache  insulator-static.json  insulator-static.mustache  json.mustache
python_magnetsetup/python_magnetsetup/templates/cfpdes/Axi/thmag/: channel-gradH.mustache  channel-mean.mustache  conductor-linear-static.mustache  conductor-nonlinear-static.mustache  conductor-static.json  flux-channel-mean.mustache  insulator-static.json  insulator-static.mustache  json.mustache  plot_B.mustache  stats_Current.mustache
python_magnetsetup/python_magnetsetup/templates/jobmanager/: dahu.json  stokes.json
python_magnetsetup/python_magnetsetup/workflows/: README.md  __init__.py  cli.py  params.py  real_methods.py  solver.py
(+436 files in other folders)
