[tool.poetry]
name = "python_magnetdb"
version = "0.1.0"
description = "MagnetDB platform"
authors = ["Christophe Trophime <christophe.trophime@lncmi.cnrs.fr>",
           "Remi Caumette <remicaumette@icloud.com>" 
          ]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
python-multipart = "^0.0.5"
minio = "^7.1.5"
psycopg2 = "^2.9.3"
orator = "^0.9.9"
PyJWT = "^2.3.0"
requests = "^2.27.1"
cryptography = "^3.3.1"
uvicorn = "^0.17.6"
celery = {extras = ["redis"], version = "^5.2.6"}
pandas = "^1.5.3"
pyarrow = "^15.0.1"
numpy = "^1.24.0"
scipy = "^1.12.0"
tabulate = "^0.9.0"
magnettools = {path = "/home/feelpp/magnettools"}
python-magnetsetup = {path = "python_magnetsetup"}
watchdog="^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
